# reciclaplus-app

./: .gitignore  CLAUDE.md  ReciclApp_PRD.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: auth.py  config.py  db.py  isoweek.py  main.py  schemas.py
backend/app/models/: __init__.py  base.py  collection.py  pdr.py  town.py  user.py  weight_entry.py
backend/app/routers/: auth.py  collections.py  dashboard.py  pdrs.py  towns.py  users.py  weights.py
frontend/: .env.local.example  middleware.ts  next.config.mjs  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/(authed)/: layout.tsx
frontend/app/(authed)/admin/: page.tsx
frontend/app/home/: page.tsx
frontend/components/: AppShell.tsx  MapPicker.tsx  PdrMap.tsx  PermissionGuard.tsx
frontend/components/admin/: TownConfigTab.tsx  UsersTab.tsx
frontend/lib/: api.ts  auth-context.tsx  barrio-colors.ts  collection-status.ts  roles.ts  strings.ts  theme.ts  types.ts  week.ts
frontend/lib/route/: outbox.ts
frontend/lib/supabase/: client.ts  server.ts
scripts/: worktree-ports.js
supabase/: config.toml  seed_admin.sql
supabase/migrations/: 20260614000001_create_users.sql  20260614000002_create_pdrs.sql  20260614000003_seed_sabana_yegua.sql  20260614000004_create_collections.sql  20260614000005_create_allowed_users.sql  20260614000006_decouple_users_from_auth.sql  20260614000007_reseed_communities.sql  20260624000001_pasada_en_ruta.sql  20260624000002_create_weight_entries.sql  20260710000001_add_pdrs_firestore_doc_id.sql
(+9 files in other folders)
